<resources>
    <string name="app_name">Market</string>
    <string name="market_logo">S Market</string>
    <string name="editTextIDHint">아이디</string>
    <string name="editTextPWHint">비밀번호</string>
    <string name="login">LOGIN</string>
    <string name="guest">GUEST</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot PW</string>
    <string name="submit">Submit</string>
    <string name="signupInfoName">이름(별명) 입력</string>
    <string name="signupInfoPhone">010-1234-5678</string>
    <string name="signupInfoAddress">한누리대 411</string>
</resources>