<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/MarketLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/market_logo"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LoginFrame"
        android:layout_width="match_parent"
        android:layout_height="0"
        android:layout_marginStart="66dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MarketLogo">

        <EditText
            android:id="@+id/loginTextEmail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editTextIDHint"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginTextPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editTextPWHint"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="18dp"
            app:layout_constraintTop_toBottomOf="@+id/loginTextEmail"
            tools:layout_editor_absoluteX="66dp" />

        <Button
            android:id="@+id/loginButtonLogin"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextPassword" />

        <Button
            android:id="@+id/loginButtonGuest"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:text="@string/guest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButtonLogin" />

        <Button
            android:id="@+id/loginButtonForgot"
            android:layout_width="136dp"
            android:layout_height="38dp"
            android:layout_marginTop="6dp"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButtonGuest" />

        <Button
            android:id="@+id/loginButtonSignUp"
            android:layout_width="136dp"
            android:layout_height="38dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginButtonForgot" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>