<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/signupInfoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/signupInfoName"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signupInfoPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/signupInfoPhone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupInfoName" />

        <EditText
            android:id="@+id/signupInfoAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/signupInfoAddress"
            android:inputType="textPostalAddress"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupInfoPhone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupInfoAddress">

            <Button
                android:id="@+id/signupInfoButtonRater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="나중에" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/signupInfoButtonSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="완료" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>